syntax = "proto3";

package proto;
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
option go_package = "books/pb/v1";

service BooksService {
    rpc AddBook (AddRequest) returns (AddResponse);
    rpc AddBooks (MultipleBooksRequest) returns (MultipleBooksResponse);
    rpc UpdateBook (AddRequest) returns (UpdateResponse);
    rpc GetAllBooks (google.protobuf.Empty) returns (GetAllBooksResponse);
    rpc GetBookByID (IDRequest) returns (IDResponse);
    rpc GetBookByTitle (TitleRequest) returns (TitleResponse);
    rpc GetBookByAuthor (AuthorRequest) returns (AuthorResponse);
    rpc Novel (NovelRequest) returns (NovelResponse);
    rpc Arbitrary (DataRequest) returns (DataResponse);
    rpc DataArbitrary (google.protobuf.Struct) returns (google.protobuf.Struct);
}

message AddRequest {
    int32 ID = 1;
    string Title = 2;
    string Author = 3;
    int32 ISBN = 4;
}

message MultipleBooksRequest{
    repeated AddRequest Books = 1;
}

message AddResponse {
    int32 ID = 1;
    string Title = 2;
    string Author = 3;
}

message MultipleBooksResponse{
    repeated AddResponse Books =1;
}

message UpdateResponse {
    int32 ID = 1;
    string Title = 2;
   string Author = 3;
}

message UpdatedBookResponse {
    repeated AddResponse UpdatedBook = 1;
}

message IDRequest {
    int32 ID = 1; 
}

message TitleRequest {
    string Title = 1;
}

message AuthorRequest {
    string Author = 1;
}

message IDResponse {
    int32 ID = 1;
    string Title = 2;
    string Author = 3;
}

message TitleResponse {
    int32 ID = 1;
    string Title = 2;
    string Author = 3;
}

message AuthorResponse {
    int32 ID = 1;
    string Title = 2;
    string Author = 3;
}

message GetAllBooksResponse{
    repeated AddResponse Books = 1;
}

message DataRequest {
    google.protobuf.Struct ArbitraryData = 1;
}

message DataResponse {
    google.protobuf.Struct ArbitraryData = 1;
}

message NovelRequest {
     
}

message NovelResponse {
    
}




